<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_location" />

        <View style="@style/emphasis_horizontal_separator_line" />

        <Spinner
            android:id="@+id/restaurant_list_filter_ubigeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_prompt" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="5dp"
                android:text="@string/label_all" />

            <TextView
                android:id="@+id/restaurant_list_filter_mark_all_restocat_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_mark_all" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="/" />

            <TextView
                android:id="@+id/restaurant_list_filter_unmark_all_restocat_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link_unmark_all" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_foodtype" />

    </RelativeLayout>

    <View style="@style/emphasis_horizontal_separator_line" />
</LinearLayout>