<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_rating_user_question_service"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_double_layout_margin"
                />

            <RatingBar
                android:id="@+id/restaurant_rating_bar_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_rating_user_question_enviroment"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_layout_margin"
                />

            <RatingBar
                android:id="@+id/restaurant_rating_bar_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_rating_user_question_food"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_layout_margin"
                />

            <RatingBar
                android:id="@+id/restaurant_rating_bar_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/restaurant_rating_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="2"
                android:layout_gravity="center_horizontal"
                android:hint="@string/restaurant_rating_user_comment"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <Button
                    android:id="@+id/restaurant_rating_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_send"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>