<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris">

    <LinearLayout
        android:id="@+id/layout_btn_register"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gris">

        <Button
            android:id="@+id/btn_register_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_round_edge"
            android:layout_margin="2dp"
            android:text="Registrarse"/>

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_btn_register"
        android:background="@color/gris"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_user"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:textColor="#ff818181"
                android:text="@string/register_label_contact"/>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/round_edge"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:id="@+id/linearLayout">

                <EditText
                    android:id="@+id/name"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/register_user_name"/>

                <EditText
                    android:id="@+id/last_name"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_user_last_name"
                    android:inputType="textPersonName"/>

                <EditText
                    android:id="@+id/email"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"/>

                <EditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:inputType="date"
                    android:focusable="false"
                    android:hint="@string/register_user_birhtday"/>

                <RadioGroup
                    android:id="@+id/radio_group_sex"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/sex_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_sex_male"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/sex_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/register_sex_female"/>

                </RadioGroup>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_password"
                android:gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:textColor="#ff818181"
                android:text="@string/register_label_password"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/round_edge"

                android:orientation="vertical">

                <EditText
                    android:id="@+id/password"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/register_label_password"/>

                <EditText
                    android:id="@+id/password_confirm"
                    android:singleLine="true"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/register_label_confirm_password"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>