<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jasoftsolutions.mikhuna.activity.fragment.RestaurantListFilterFragment">

    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >

        <LinearLayout
            android:id="@+id/filter_buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            >

            <Button
                android:id="@+id/button_apply_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_apply_filter"
                />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_above="@id/filter_buttons_layout"
            android:fillViewport="true"
            android:padding="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_location"
                        />

                    <View style="@style/emphasis_horizontal_separator_line" />

                    <Spinner
                        android:id="@+id/restaurant_list_filter_ubigeo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:prompt="@string/select_prompt"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/default_separator_margin_2"
                    >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_alignParentRight="true"
                            >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/label_all"
                                android:layout_marginRight="5dp"
                                />

                            <TextView
                                android:id="@+id/restaurant_list_filter_mark_all_restocat_link"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/link_mark_all"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="/"
                                />

                            <TextView
                                android:id="@+id/restaurant_list_filter_unmark_all_restocat_link"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/link_unmark_all"
                                />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_foodtype"
                            />

                    </RelativeLayout>

                    <View style="@style/emphasis_horizontal_separator_line" />

                    <com.jasoftsolutions.mikhuna.activity.ui.ExpandedGridView
                        android:id="@+id/restaurant_list_filter_restocat_grid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="auto_fit"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/default_separator_margin_2"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_servicetype"
                        />

                    <View style="@style/emphasis_horizontal_separator_line" />

                    <com.jasoftsolutions.mikhuna.activity.ui.ExpandedGridView
                        android:id="@+id/restaurant_list_filter_servicetype_grid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:numColumns="auto_fit"
                        />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</FrameLayout>
